--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -14,6 +14,7 @@
     </header>
 
     <nav>
+      <a class='dropbtn' href="/">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Merchants</button>
           <div class="dropdown-content">
@@ -41,7 +42,7 @@
     </nav>
 
     <div class="main-section merchants">
-      <section class="create-form form-page">
+      <section class="form-page">
         <form action="/merchants" method="post">
           <p>Create a new merchant:</p>
           <input id='new-name' type='text' name='merchant[name]' value="Name"/><br>
