--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -14,24 +14,48 @@
     </header>
 
     <nav>
-        <a class='nav-links' href="/merchants">Merchant Index</a>
-        <a class='nav-links' href="/categories">Category Index</a>
-        <a class='nav-links' href="/items">Item Index</a>
+      <a class='dropbtn' href="/">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn">Merchants</button>
+          <div class="dropdown-content">
+            <a href="/merchants">Merchant Index</a>
+            <a href="/merchants/new">Create New Merchant</a>
+            <a href="/merchants-dashboard">Merchant Analytics</a>
+          </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">Items</button>
+          <div class="dropdown-content">
+            <a href="/items">Item Index</a>
+            <a href="/items/new">Create New Item</a>
+            <a href="/items-dashboard">Item Analytics</a>
+          </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">Categories</button>
+          <div class="dropdown-content">
+            <a href="/categories">Category Index</a>
+            <a href="/categories/new">Create New Category</a>
+            <a href="/categories-dashboard">Category Analytics</a>
+          </div>
+      </div>
     </nav>
 
-    <section class='form-page'>
-      <form action="/merchants/<%= @merchant.id %>" method="POST">
-        <p>Edit</p>
-        <input type="hidden" name="_method" value="PUT" />
-        <input id='edit-name' type='text' name='merchant[name]' value="<%= @merchant.name %>"/><br/>
-        <input id='edit-submit' type='submit'/>
-      </form>
-      <div class="quote">
-        <p class="quote">If we don't change, we don't grow.</p>
-        <p class="quote">If we don't grow, we aren't really living.</p>
-        <p class="quote">- Gail Sheehy -</p>
-      </div>
-    </section>
+    <div class='main-section merchants'>
+      <section class='form-page edit-form'>
+        <form action="/merchants/<%= @merchant.id %>" method="POST">
+          <p>Edit</p>
+          <input type="hidden" name="_method" value="PUT" />
+          <input id='edit-name' type='text' name='merchant[name]' value="<%= @merchant.name %>"/><br/>
+          <input id='edit-submit' type='submit'/>
+        </form>
+        <div class="quote">
+          <p class="quote">If we don't change, we don't grow.</p>
+          <p class="quote">If we don't grow, we aren't really living.</p>
+          <p class="quote">- Gail Sheehy -</p>
+        </div>
+      </section>
+    </div>
 
     <footer>
       <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
