--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -15,6 +15,7 @@
         <h1>Merchants</h1>
       </header>
       <nav>
+        <a class='dropbtn' href="/">Home</a>
         <div class="dropdown">
           <button class="dropbtn">Merchants</button>
             <div class="dropdown-content">
@@ -46,7 +47,7 @@
       <section class='create-new'>
         <a class='body-link' href='/merchants/new'>Create New Merchant</a>
       </section>
-      
+
     <section class="display-grid">
       <% @merchants.each do |merchant| %>
         <div class='grid-cell'>
