--- a/app/views/categories/dashboard.erb
+++ b/app/views/categories/dashboard.erb
@@ -41,16 +41,18 @@
       </nav>
     </div>
 
-    <section class='dashboard-metrics categories'>
-      <p>Category with most expensive item: <%= @categories.includes_most_expensive_item %></p>
-      <p>Category with least expensive item: <%= @categories.includes_least_expensive_item %></p>
-      <p>Average item price per category:
-        <% @categories.each do |category| %>
-          <ul>
-            <li><%= category.name %>: $<%= category.average_price %></li>
-          </ul>
-        <% end %>
-      </p>
+    <section class='categories'>
+      <div class='dashboard-metrics'>
+        <p>Category with most expensive item: <%= @categories.includes_most_expensive_item %></p>
+        <p>Category with least expensive item: <%= @categories.includes_least_expensive_item %></p>
+        <p>Average item price per category:
+          <% @categories.each do |category| %>
+            <ul>
+              <li><%= category.name %>: $<%= category.average_price %></li>
+            </ul>
+          <% end %>
+        </p>
+      </div>
     </section>
 
     <footer>
