--- a/app/views/merchants/dashboard.erb
+++ b/app/views/merchants/dashboard.erb
@@ -14,19 +14,41 @@
         <h1>Merchant Dashboard</h1>
       </header>
       <nav>
-          <a class='nav-links' href="/">Home</a>
-          <a class='nav-links' href="/merchants">Merchant Index</a>
-          <a class='nav-links' href="/categories">Category Index</a>
+        <a class='dropbtn' href="/">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn">Merchants</button>
+            <div class="dropdown-content">
+              <a href="/merchants">Merchant Index</a>
+              <a href="/merchants/new">Create New Merchant</a>
+              <a href="/merchants-dashboard">Merchant Analytics</a>
+            </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Items</button>
+            <div class="dropdown-content">
+              <a href="/items">Item Index</a>
+              <a href="/items/new">Create New Item</a>
+              <a href="/items-dashboard">Item Analytics</a>
+            </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Categories</button>
+            <div class="dropdown-content">
+              <a href="/categories">Category Index</a>
+              <a href="/categories/new">Create New Category</a>
+              <a href="/categories-dashboard">Category Analytics</a>
+            </div>
+        </div>
       </nav>
     </div>
 
     <div class='main-section merchants'>
       <section class='dashboard-metrics'>
-        <p>Merchant with most items: <%= @merchants.has_most_items.name %></p>
-        <p>Merchant with highest priced item: <%= @merchants.includes_most_expensive_item.name %></p>
+        <h4>Merchant with most items: <%= @merchants.has_most_items.name %></h4>
+        <h4>Merchant with highest priced item: <%= @merchants.includes_most_expensive_item.name %></h4>
       </section>
 
-      <h3>Individual Merchant Analytics</h3>
+      <h2>Individual Merchant Analytics</h2>
       <div class="display-grid">
           <% @merchants.each do |merchant| %>
             <div class="grid-cell">
