--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -41,7 +41,7 @@
     </nav>
 
     <div class='main-section items analytics'>
-      <section class="create-form form-page">
+      <section class="new-item-form">
         <form action="/items" method="POST">
           <p>Create a new item:</p>
           <input id='new-title' type='text' name='item[title]' value="Title"/><br>
