--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 h4 {
-  background-color: rgba(229, 229, 232, 0.65);
+  /* background-color: rgba(229, 229, 232, 0.65); */
   margin: 0px;
   color: black;
 }
@@ -266,6 +266,12 @@ p.quote {
 }
 
 .item-info {
+  margin: 10px;
+  background-color: rgba(229, 229, 232, 0.65);
+  text-align: center;
+}
+
+.item-dashboard-info{
   margin-top: 150px;
   margin-left: 10px;
   margin-right: 10px;
