--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -14,6 +14,7 @@
     </header>
 
     <nav>
+      <a class='dropbtn' href="/">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Merchants</button>
           <div class="dropdown-content">
@@ -40,32 +41,34 @@
       </div>
     </nav>
 
-    <section class='form-page'>
-      <form action="/items/<%= @item.id %>" method="POST">
-        <p>Edit</p>
-        <input type="hidden" name="_method" value="PUT" />
-        <input id='edit-title' type='text' name='item[title]' value="<%= @item.title %>"/><br/>
-        <textarea id='edit-descr' name='item[description]'><%= @item.description %></textarea>
-        <input id='edit-price' type='number' name='item[price]' value="<%= @item.price %>"/><br/>
-        <input id='edit-image' type='text' name='item[image]' value="<%= @item.image %>"/><br/>
-        <select id='edit-merchant' name='item[merchant_id]'>
-          <% @merchants.each do |merchant| %>
-            <option value="<%= merchant.id %>"><%= merchant.name %></option>
-          <% end %>
-        </select><br/><br/>
-        <select id='edit-category' name='item[category_id]'>
-          <% @categories.each do |category| %>
-            <option value="<%= category.id %>"><%= category.name %></option>
-          <% end %>
-        </select><br/>
-        <input id='edit-submit' type='submit'/>
-      </form>
-      <div class="quote">
-        <p class="quote">It is not necessary to change.</p>
-        <p class="quote">Survival is not necessary.</p>
-        <p class="quote">- W. Edwards Deming -</p>
-      </div>
-    </section>
+    <div class='main-section items analytics'>
+      <section class='edit-item-form'>
+        <form action="/items/<%= @item.id %>" method="POST">
+          <p>Edit</p>
+          <input type="hidden" name="_method" value="PUT" />
+          <input id='edit-title' type='text' name='item[title]' value="<%= @item.title %>"/><br/>
+          <textarea id='edit-descr' name='item[description]'><%= @item.description %></textarea>
+          <input id='edit-price' type='number' name='item[price]' value="<%= @item.price %>"/><br/>
+          <input id='edit-image' type='text' name='item[image]' value="<%= @item.image %>"/><br/>
+          <select id='edit-merchant' name='item[merchant_id]'>
+            <% @merchants.each do |merchant| %>
+              <option value="<%= merchant.id %>"><%= merchant.name %></option>
+            <% end %>
+          </select><br/><br/>
+          <select id='edit-category' name='item[category_id]'>
+            <% @categories.each do |category| %>
+              <option value="<%= category.id %>"><%= category.name %></option>
+            <% end %>
+          </select><br/>
+          <input id='edit-submit' type='submit'/>
+        </form>
+        <div class="quote">
+          <p class="quote">It is not necessary to change.</p>
+          <p class="quote">Survival is not necessary.</p>
+          <p class="quote">- W. Edwards Deming -</p>
+        </div>
+      </section>
+    </div>
 
     <footer>
       <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
