--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -14,6 +14,7 @@
         <h1>Items</h1>
       </header>
       <nav>
+        <a class='dropbtn' href="/">Home</a>
         <div class="dropdown">
           <button class="dropbtn">Merchants</button>
             <div class="dropdown-content">
