Uddates category analytics and show

--- a/app/views/merchants/dashboard.erb
+++ b/app/views/merchants/dashboard.erb
@@ -43,9 +43,9 @@
     </div>
 
     <div class='main-section merchants'>
-      <section class='dashboard-metrics'>
-        <h4>Merchant with most items: <%= @merchants.has_most_items.name %></h4>
-        <h4>Merchant with highest priced item: <%= @merchants.includes_most_expensive_item.name %></h4>
+      <section class='item-dashboard-info'>
+        <h1>Merchant with most items: <%= @merchants.has_most_items.name %></h1>
+        <h1>Merchant with highest priced item: <%= @merchants.includes_most_expensive_item.name %></h1>
       </section>
 
       <h2>Individual Merchant Analytics</h2>
