--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -230,7 +230,7 @@ form {
 .categories {
   background-image: url("https://images.unsplash.com/photo-1468408816249-a6778cf9ace2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a360b86d7d081e927c2d934865ee933c&auto=format&fit=crop&w=1950&q=80");
   background-size: cover;
-  height: 800px;
+  /* height: 800px; */
 }
 
 .analytics {
@@ -275,6 +275,6 @@ p.quote {
   margin-top: 150px;
   margin-left: 10px;
   margin-right: 10px;
-  background-color: rgba(229, 229, 232, 0.65);
+  background-color: rgba(229, 229, 232, 0.80);
   text-align: center;
 }
