--- a/app/views/categories/dashboard.erb
+++ b/app/views/categories/dashboard.erb
@@ -14,6 +14,7 @@
         <h1>Category Analytics</h1>
       </header>
       <nav>
+        <a class='dropbtn' href="/">Home</a>
         <div class="dropdown">
           <button class="dropbtn">Merchants</button>
             <div class="dropdown-content">
@@ -42,16 +43,16 @@
     </div>
 
     <section class='main-section categories analytics'>
-      <div class='dashboard-metrics'>
-        <p>Category with most expensive item: <%= @categories.includes_most_expensive_item %></p>
-        <p>Category with least expensive item: <%= @categories.includes_least_expensive_item %></p>
-        <p>Average item price per category:
+      <div class='item-dashboard-info'>
+        <h4>Category with most expensive item: <%= @categories.includes_most_expensive_item %></h4><br>
+        <h4>Category with least expensive item: <%= @categories.includes_least_expensive_item %></h4><br>
+        <h4>Average item price per category:
           <% @categories.each do |category| %>
             <ul>
               <li><%= category.name %>: $<%= category.average_price %></li>
             </ul>
           <% end %>
-        </p>
+        </h4>
       </div>
     </section>
 
