--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -191,6 +191,28 @@ form {
   background-color: rgb(229,229,232);
 }
 
+.category-edit-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+  width: 20%;
+  height: 250px;
+  margin-left: 40%;
+  background-color: rgba(229,229,232, 0.9);
+}
+
+.new-category-form {
+  width: 15%;
+  height: 150px;
+  margin-left: 42.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(229,229,232, 0.95);
+}
+
 .new-item-form {
   width: 25%;
   height: 55%;
