--- a/app/views/categories/edit.erb
+++ b/app/views/categories/edit.erb
@@ -14,6 +14,7 @@
     </header>
 
     <nav>
+      <a class='dropbtn' href="/">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Merchants</button>
           <div class="dropdown-content">
@@ -40,18 +41,20 @@
       </div>
     </nav>
 
-    <section class='form-page'>
-      <form action="/categories/<%= @category.id %>" method="POST">
-        <p>Edit</p>
-        <input type="hidden" name="_method" value="PUT" />
-        <input id='edit-name' type='text' name='category[name]' value="<%= @category.name %>"/><br/>
-        <input id='edit-submit' type='submit'/>
-      </form>
-      <div class="quote">
-        <p class="quote">Change is Inevitable. Change is Constant</p>
-        <p class="quote">- Benjamin Disraeli -</p>
-      </div>
-    </section>
+    <div class='main-section categories'>
+      <section class='category-edit-form'>
+        <form action="/categories/<%= @category.id %>" method="POST">
+          <p>Edit</p>
+          <input type="hidden" name="_method" value="PUT" />
+          <input id='edit-name' type='text' name='category[name]' value="<%= @category.name %>"/><br/>
+          <input id='edit-submit' type='submit'/>
+        </form>
+        <div class="quote">
+          <p class="quote">Change is Inevitable. Change is Constant</p>
+          <p class="quote">- Benjamin Disraeli -</p>
+        </div>
+      </section>
+    </div>
 
     <footer>
       <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
