--- a/app/views/categories/new.erb
+++ b/app/views/categories/new.erb
@@ -14,6 +14,7 @@
     </header>
 
     <nav>
+      <a class='dropbtn' href="/">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Merchants</button>
           <div class="dropdown-content">
@@ -41,7 +42,7 @@
     </nav>
 
     <div class='main-section categories'>
-      <section class="create-form form-page">
+      <section class="new-category-form">
         <form action="/categories" method="post">
           <p>Create a new category:</p>
           <input id='new-name' type='text' name='category[name]' value="Name"/><br/><br/>
