--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -41,7 +41,7 @@
       </div>
     </nav>
 
-    <div class="main-section merchants">
+    <div class="main-section merchants new-form">
       <section class="form-page">
         <form action="/merchants" method="post">
           <p>Create a new merchant:</p>
