--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -288,6 +288,11 @@ form {
 
 .merchants {
   background-image: url("https://images.unsplash.com/photo-1465126188505-4f04a0f23a4d?ixlib=rb-0.3.5&s=31f34e16776b5471afd03cc3bbc2ffb7&auto=format&fit=crop&w=1675&q=80");
+  height: 100%;
+  size: 100% 100%;
+}
+
+.new-form {
   height: 800px;
 }
 
