--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -41,7 +41,7 @@
       </div>
     </nav>
 
-    <div class='main-section merchants'>
+    <div class='main-section merchants new-form'>
       <section class='form-page edit-form'>
         <form action="/merchants/<%= @merchant.id %>" method="POST">
           <p>Edit</p>
