--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -14,6 +14,7 @@
         <h1>Categories</h1>
       </header>
       <nav>
+        <a class='dropbtn' href="/">Home</a>
         <div class="dropdown">
           <button class="dropbtn">Merchants</button>
             <div class="dropdown-content">
@@ -43,7 +44,7 @@
 
     <div class='main-section category-index'>
       <section class='create-new'>
-        <a class='body-link' href='/categories/new'>Create New Category</a>
+        <a class='new-link' href='/categories/new'>Create New Category</a>
       </section>
 
     <section class="display-grid">
