--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -44,21 +44,45 @@
     <div class='main-section items analytics'>
       <section class="new-item-form">
         <form action="/items" method="POST">
-          <p>Create a new item:</p>
-          <input id='new-title' type='text' name='item[title]' value="Title"/><br>
-          <textarea id='new-descr' name='item[description]' value="Description Here"></textarea><br>
-          <input id='new-price' type='number' name='item[price]' value="Price"/><br>
-          <input id='new-image' type='text' name='item[image]' value="Image URL"/><br>
-          <select id='new-merchant' name='item[merchant_id]'><br>
-            <% @merchants.each do |merchant| %>
-              <option value="<%= merchant.id %>"><%= merchant.name %></option>
-            <% end %>
-          </select><br/>
-          <select id='new-category' name='item[category_id]'>
-            <% @categories.each do |category| %>
-              <option value="<%= category.id %>"><%= category.name %></option>
-            <% end %>
-          </select><br/>
+          <h3>Create a new item:</h3>
+          <div>
+            <p>Title:<br>
+            <input id='new-title' type='text' name='item[title]'/><br>
+            </p>
+          </div>
+          <div>
+            <p>Description:<br>
+            <textarea id='new-descr' name='item[description]' value="Description Here"></textarea><br>
+            </p>
+          </div>
+          <div>
+            <p>Price (in cents):<br>
+            <input id='new-price' type='number' name='item[price]' value="Price"/><br>
+            </p>
+          </div>
+          <div>
+            <p>Image URL:<br>
+              <input id='new-image' type='text' name='item[image]'/><br>
+            </p>
+          </div>
+          <div>
+            <p>Merchant:<br>
+            <select id='new-merchant' name='item[merchant_id]'><br>
+              <% @merchants.each do |merchant| %>
+                <option value="<%= merchant.id %>"><%= merchant.name %></option>
+              <% end %>
+            </select><br/>
+            </p>
+          </div>
+          <div>
+            <p>Category:<br>
+            <select id='new-category' name='item[category_id]'>
+              <% @categories.each do |category| %>
+                <option value="<%= category.id %>"><%= category.name %></option>
+              <% end %>
+            </select><br/>
+            </p>
+          </div>
           <input id='new-submit' type='submit'/>
         </form>
       </section>
