--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -250,7 +250,7 @@ form {
 
 .edit-item-form {
   width: 25%;
-  height: 490px;
+  height: 80%;
   margin-left: 37.25%;
   margin-top: 5px;
   display: flex;
