--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -307,7 +307,7 @@ form {
 .categories {
   background-image: url("https://images.unsplash.com/photo-1468408816249-a6778cf9ace2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a360b86d7d081e927c2d934865ee933c&auto=format&fit=crop&w=1950&q=80");
   background-size: cover;
-  /* height: 800px; */
+  height: 800px; 
 }
 
 .analytics {
