--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -18,7 +18,6 @@ h2 {
 }
 
 h4 {
-  /* background-color: rgba(229, 229, 232, 0.65); */
   margin: 0px;
   color: black;
 }
@@ -37,7 +36,6 @@ header {
   text-decoration: none;
 }
 
-/* Dropdown Button */
 .dropbtn {
     background-color: rgb(47, 72, 88);
     color: rgb(229,229,232);
@@ -48,13 +46,11 @@ header {
     text-decoration: none;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -65,7 +61,6 @@ header {
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -73,17 +68,14 @@ header {
     display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #f1f1f1;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: rgb(100, 134, 162);
 }
@@ -307,7 +299,7 @@ form {
 .categories {
   background-image: url("https://images.unsplash.com/photo-1468408816249-a6778cf9ace2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a360b86d7d081e927c2d934865ee933c&auto=format&fit=crop&w=1950&q=80");
   background-size: cover;
-  height: 800px; 
+  height: 800px;
 }
 
 .analytics {
@@ -335,6 +327,7 @@ p.quote {
   margin: 10px;
   background-color: rgba(229, 229, 232, 0.65);
   text-align: center;
+  padding: 8px;
 }
 
 .info-link {
