about us section added

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -45,7 +45,7 @@
     <section class="intro-page">
       <div class='about-us'>
         <h3>About Us</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
+        <p>Welcome to the Shop with no name.  Buried in a foggy mountain mist, deep in the mountains of Sri Lanka, a lone merchant cloaked in lambs wool treks across the ridge line, destination unknown.  This mysterious merchant was known throughtout the mountain towns as a provide of foreign treasures.  He would arrive on foot, leading a burrow hitched to a wooden trailer.  In this trailer they found items from other worlds, gifts that awed their receivers.  Come, take a look...<p>
       </div>
     </section>
 
